--- a/Submission 1.html
+++ b/Submission 1.html
@@ -8,8 +8,14 @@
 </head>
 
 <body>
+	<nav>
 	<a href="https://www.youtube.com/watch?v=yzNaKWDnfkY&pp=ygUTZG9nIHZpZGVvcyAxIG1pbnV0ZQ%3D%3D">Dogs in Action</a> |
 	<a href="C:\Users\Student\Desktop\HTML\Images\dog.jpg">Dog Picture</a> |
+	</nav>
+	<p><strong>Can I have one of each!</p></strong>
+	<div>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/yzNaKWDnfkY?si=tKih6_MG-P-uDZ6b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	</div>
 </body>
 
 </html>
