--- a/Project/Submission4ish.html
+++ b/Project/Submission4ish.html
@@ -36,7 +36,7 @@
             <!--PHOTO CONTAINER 1-->
             <div>
                 <div>
-                    <img src="Project/Images/Thumbnails/Moon.jpeg" alt="Moon">
+                    <img src="Project/Images/Thumbnails/Moon.jpg" alt="Moon">
                     <div>
                         <h3>Click to Enlarge</h3>
                         <p>We have several space launches departing daily, book your flight today.</p>
